--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -238,7 +238,9 @@ metadata:
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30080---
+      nodePort: 30080
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
