--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -17,7 +17,7 @@ data:
   APP_ENV: "production"
   APP_DEBUG: "false"
   QR_DOMAIN: "http://localhost:30080"
-  REACT_APP_API_URL: "http://localhost:30082/api"  # ZMIENIONE - frontend będzie łączył się przez NodePort
+  REACT_APP_API_URL: "http://localhost:30082/api"
 
 ---
 apiVersion: v1
@@ -182,13 +182,13 @@ metadata:
   name: backend
   namespace: qrscanner
 spec:
-  type: NodePort  # ZMIENIONE z ClusterIP na NodePort
+  type: NodePort
   selector:
     app: backend
   ports:
     - port: 80
-      targetPort: 9000
-      nodePort: 30082  # DODANE - backend dostępny na localhost:30082
+      targetPort: 80
+      nodePort: 30082
 
 ---
 apiVersion: apps/v1
@@ -211,7 +211,7 @@ spec:
         image: pakubjajor/qrscanner-backend:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 9000
+        - containerPort: 80
         envFrom:
         - configMapRef:
             name: qrscanner-config
